# dj_blog_server

./: .gitignore  Makefile  pyproject.toml
blog/: admin.py  models.py  serializers.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20200602_1436.py
blog_server/: middlewaries.py  settings.py  urls.py
users/migrations/: 0001_initial.py
